@@ -1,3 +1,7 @@
+drkns 06.12.2016 09:32:48 +0200 - build 4868
+
+1. Отменим пока 4866.1, т. к. стало хуже.
+
 drkns 06.12.2016 02:43:44 +0200 - build 4867
 
 1. Уточнение 4866.
